[package]
name = "afx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
eframe = { version = "0.29.1", features = ["persistence"] }
kira = "0.10.0"
lz4_flex = "0.11.3"
parking_lot = "0.12"
rayon = "1.10.0"
rfd = "0.15.2"
rgb = "0.8.48"
rmp-serde = "1.3.0"
serde = "1.0"
symphonia = { version = "^0.5", features = ["isomp4"] }
thread-priority = "1.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-timing = "0.6.0"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.15.0"

[profile.release]
codegen-units = 1
lto = true

# workaround for slow MP3 load times in debug mode
# see https://github.com/tesselode/kira/issues/24
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3
